# rk-digi-serviceplatformen-package

./: .gitignore  LICENSE  README.md
.github/workflows/: build-publish.yml
dotnet/src/: KombitServiceClient.sln
dotnet/src/KombitServiceClient/: KombitServiceClient.csproj
dotnet/src/KombitServiceClient.Tests/: KombitServiceClient.Tests.csproj  ServiceConfigurationTests.cs
dotnet/src/KombitServiceClient/Configuration/: ServiceConfiguration.cs
dotnet/src/KombitServiceClient/ConnectedServices/PersonBaseDataExtendedService/: dotnet-svcutil.params.json
dotnet/src/KombitServiceClient/ConnectedServices/SF0770A/SKATForwardEIndkomstService/: SKATForwardEIndkomstService.cs  dotnet-svcutil.params.json
dotnet/src/KombitServiceClient/Integrations/SF0770A/: SKATForwardEIndkomstClient.cs
dotnet/src/KombitServiceClient/Integrations/SF1491/: YdelseListeHentClient.cs
dotnet/src/KombitServiceClient/Integrations/SF1520/: PersonBaseDataExtendedClient.cs
dotnet/src/KombitServiceClient/Services/: CPRPersonLookup.cs
python/: README.md  pyproject.toml
python/src/kombit-client/services/: CPR.py
python/src/kombit_client/: configuration.py
python/src/kombit_client/dotnet/: _bridge.py
python/src/kombit_client/integrations/sf0770a/: __init__.py  skat_forward_eindkomst.py
python/src/kombit_client/integrations/sf1491/: __init__.py  ydelse_liste_hent.py
python/src/kombit_client/integrations/sf1520/: __init__.py  person_base_data_extended.py
python/src/kombit_client/services/: CPR.py
python/src/kombit_client/utils/: certificate.py
(+3 files in other folders)
